- new modules (core, example) - changed groupid/artifactid

--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-<div ng-app="dash" ng-controller="dashcontroller" class="panel"
+<div ng-app="de.axelspringer.ideas.tools.dash" ng-controller="dashcontroller" class="panel"
      ng-class="{true: 'alert-danger', false: 'alert-info'}[lastUpdate.state == 'red']">
     <div class="global-info">Last update: {{ infos.lastUpdateTime | date:'medium' }}</div>
 
