better looking code

--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -56,11 +56,11 @@
         </div>
     </div>
 
-    <select ng-model="team">
+    <select ng-model="config.team">
         <option>All Teams</option>
         <option ng-repeat="team in teams">{{ team }}</option>
     </select>
-    <input type="checkbox" ng-model="aggregate" ng-click="loadInfos()"/> aggregate
+    <input type="checkbox" ng-model="config.aggregate" ng-click="loadInfos()"/> aggregate
 </div>
 </body>
 </html>
