--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
     <div class="global-info">Last update: {{ infos.lastUpdateTime | date:'medium' }}</div>
 
     <div class="panel-body">
-        <div ng-repeat="group in infos.groups | orderBy:groupOrder" class="check-group panel">
+        <div ng-repeat="group in infos.groups | orderBy:'orderScore'" class="check-group panel">
             <div class="panel-body">
                 <div class="stage-info {{ groupClass(group) }}">
                     <div class="check-name">{{ group.name }}</div>
