--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -26,8 +26,8 @@
 
 <div class="panel" ng-class="{true: 'alert-danger', false: 'alert-info'}[lastUpdate.state == 'red']">
 
-    <div class="global-info" ng-class="{true: 'alert-danger'}[lastUpdate.state == 'red']">Last update: {{
-        infos.lastUpdateTime | date:'medium' }}
+    <div class="global-info" ng-class="{true: 'alert-danger'}[lastUpdate.state == 'red']">
+        Last update: {{infos.lastUpdateTime | date:'medium' }}
     </div>
 
     <label class="team-label">
