--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -27,6 +27,7 @@
     <script src="app/services/stateutils.js"></script>
     <script src="app/dash/dash.js"></script>
     <script src="app/dash/options/options.js"></script>
+    <script src="app/dash/group/group.js"></script>
 </head>
 <body>
 
