--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -28,6 +28,7 @@
     <script src="app/dash/dash.js"></script>
     <script src="app/dash/options/options.js"></script>
     <script src="app/dash/group/group.js"></script>
+    <script src="app/dash/group/info/groupinfo.js"></script>
 </head>
 <body>
 
