--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -8,23 +8,24 @@
 
     <link rel="stylesheet" href="dash.css">
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="vendor/bootstrap/bootstrap-theme.min.css">
 
     <!-- here for glow-animation (running jobs) -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <script src="vendor/prefixfree/prefixfree.min.js"></script>
 
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-sanitize.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-resource.min.js"></script>
+    <script src="vendor/angular-1.5.8/angular.min.js"></script>
+    <script src="vendor/angular-1.5.8/angular-sanitize.min.js"></script>
+    <script src="vendor/angular-1.5.8/angular-resource.min.js"></script>
     <!-- here for date formatting (last updated)-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.2.10/angular-locale_de-de.min.js"></script>
+    <script src="vendor/angular-locale/angular-locale_de-de.min.js"></script>
 
     <script src="index.js"></script>
     <script src="app/services/applicationconfiguration.js"></script>
     <script src="app/services/philipshue.js"></script>
     <script src="app/services/groupfilterutils.js"></script>
     <script src="app/services/stateutils.js"></script>
+    <script src="app/services/persistence.js"></script>
     <script src="app/dash/dash.js"></script>
     <script src="app/dash/options/options.js"></script>
     <script src="app/dash/group/group.js"></script>
