- FailureGroup now is an AbstractGroup (avoid log pollution) - Make ExampleGroup in ExampleDash implement MetaInfo-Methods to avoid log pollution - Aggregate Duplicated is not an options any more (always performed) - Removed empty controller definition from options directive - Renamed teams->selectedTeams, better naming - Renamed options->showOptions, better naming - showOptions now persisted - refactor selectedTeams-implementation (better readability, more sane implementation) - replace angular.extend with angular.foreach (extend failed for boolean properties) - disable caching (templates were not reloaded)

--- a/dash-core/src/main/resources/static/app/dash/dash.html
+++ b/dash-core/src/main/resources/static/app/dash/dash.html
@@ -4,8 +4,9 @@
         Last update: {{infos.lastUpdateTime | date:'medium' }}
     </div>
 
-    <div ng-click="options=!options">{{ options ? 'hide options' : 'show options' }}</div>
-    <div options ng-show="options"></div>
+    <div ng-click="config.showOptions=!config.showOptions">{{ config.showOptions ? 'hide options' : 'show options' }}
+    </div>
+    <div options ng-show="config.showOptions"></div>
 
     <div class="panel-body">
         <div ng-repeat="group in infos.groups | orderBy:'orderScore'"
