--- a/dash-core/src/main/resources/static/index.html
+++ b/dash-core/src/main/resources/static/index.html
@@ -26,6 +26,7 @@
     <script src="app/services/groupfilterutils.js"></script>
     <script src="app/services/stateutils.js"></script>
     <script src="app/services/persistence.js"></script>
+    <script src="app/services/comments.js"></script>
     <script src="app/dash/dash.js"></script>
     <script src="app/dash/options/options.js"></script>
     <script src="app/dash/group/group.js"></script>
