--- a/dash-core/src/main/resources/static/app/dash/options/options.html
+++ b/dash-core/src/main/resources/static/app/dash/options/options.html
@@ -1,4 +1,5 @@
-<div>
+<div ng-click="config.showOptions=!config.showOptions">{{ config.showOptions ? 'hide options' : 'show options' }}</div>
+<div ng-show="config.showOptions">
     <label class="team-label">
         <input type="checkbox" ng-model="config.showEmptyGroups" ng-click="loadInfos()"/> show empty groups
     </label>
