--- a/dash-core/src/main/resources/static/app/dash/group/group.html
+++ b/dash-core/src/main/resources/static/app/dash/group/group.html
@@ -3,35 +3,9 @@
     <div groupinfo class="stage-info {{ groupClass(group) }}"></div>
 
     <div class="checks">
-        <div ng-repeat="check in group.checks | orderBy:[checkOrder, 'name']"
+        <check ng-repeat="check in group.checks | orderBy:[checkOrder, 'name']"
              class="panel check {{ checkClass(check.state) }}"
              ng-class="{'running': check.running}" title="{{check.info}}">
-
-            <div class="panel-content-left">
-                <!-- link if specified, div if not -->
-                <a ng-show="check.link" href="{{ check.link }}" target="_blank">
-                    <div class="check-name">{{ check.name }}</div>
-                    <div ng-bind-html="check.info | limitTo : 25"></div>
-                </a>
-
-                <div ng-hide="check.link">
-                    <div class="check-name">{{ check.name }}</div>
-                    <div ng-bind-html="check.info | limitTo : 25"></div>
-                </div>
-            </div>
-
-            <div ng-show="check.checkResultIdentifier">
-                <input type="text" ng-model="newcomment" title="new comment">
-                <input type="button"
-                       ng-click="addComment(newcomment, check.checkResultIdentifier)">
-                <div ng-repeat="comment in comments | filter:byCheck(check, comment)">
-                    <br>{{ comment.comment }}
-                </div>
-            </div>
-
-            <div class="panel-content-right" ng-if="check.iconSrc">
-                <img src="{{check.iconSrc}}" width="30" height="30"/>
-            </div>
-        </div>
+        </check>
     </div>
 </div>
