make comments work (in general)

--- a/dash-core/src/main/resources/static/app/dash/group/check/check.html
+++ b/dash-core/src/main/resources/static/app/dash/group/check/check.html
@@ -13,6 +13,7 @@
 
 <div ng-show="check.checkResultIdentifier">
     <input type="text" ng-model="newcomment" title="new comment">
+    <!-- TODO: style comments -->
     <input type="button"
            ng-click="addComment(newcomment, check.checkResultIdentifier)">
     <div ng-repeat="comment in comments | byCheckResultIdentifier:check.checkResultIdentifier">
