--- a/dash-core/src/main/resources/static/app/dash/options/options.html
+++ b/dash-core/src/main/resources/static/app/dash/options/options.html
@@ -1,10 +1,10 @@
 <div ng-click="config.showOptions=!config.showOptions">{{ config.showOptions ? 'hide options' : 'show options' }}</div>
 <div ng-show="config.showOptions">
     <label class="team-label">
-        <input type="checkbox" ng-model="config.showEmptyGroups" ng-click="loadInfos()"/> show empty groups
+        <input type="checkbox" ng-model="config.showEmptyGroups""/> show empty groups
     </label>
     <label class="team-label">
-        <input type="checkbox" ng-model="config.hue.enabled" ng-click="loadInfos()"/> hue
+        <input type="checkbox" ng-model="config.hue.enabled""/> hue
         <div ng-show="config.hue.enabled">
             ip <input type="text" size="12" ng-model="config.hue.ip">
             key <input type="text" size="12" ng-model="config.hue.key">
@@ -12,6 +12,6 @@
         </div>
     </label>
     <label ng-repeat="team in teams" class="team-label">
-        <input type="checkbox" ng-model="config.selectedTeams[team]" ng-click="loadInfos()"/> {{ team }}
+        <input type="checkbox" ng-model="config.selectedTeams[team]"/> {{ team }}
     </label>
 </div>
