--- a/dash-core/src/main/resources/static/app/dash/group/check/check.html
+++ b/dash-core/src/main/resources/static/app/dash/group/check/check.html
@@ -11,18 +11,22 @@
     </div>
 </div>
 
-<div ng-show="check.checkResultIdentifier">
-    <input type="text" ng-model="newcomment" title="new comment">
-    <!-- TODO: disable comments field when commenting in progress -->
-    <!-- TODO: style comments -->
-    <!-- TODO: clear input field after submit -->
-    <input type="button"
-           ng-click="addComment(newcomment, check.checkResultIdentifier)">
-    <div ng-repeat="comment in comments | byCheckResultIdentifier:check.checkResultIdentifier">
-        <br>{{ comment.comment }}
-    </div>
-</div>
-
 <div class="panel-content-right" ng-if="check.iconSrc">
     <img src="{{check.iconSrc}}" width="30" height="30"/>
+</div>
+
+<div ng-show="check.checkResultIdentifier" class="comments">
+    <!-- TODO: disable comments field when commenting in progress -->
+    <!-- TODO: clear input field after submit -->
+    <blockquote class="comment" ng-repeat="comment in comments | byCheckResultIdentifier:check.checkResultIdentifier">
+        {{ comment.comment }}
+    </blockquote>
+
+    <div class="comments-form form-inline">
+        <input type="text" ng-model="newcomment" placeholder="new comment" class="form-control">
+        <button class="btn btn-default"
+                ng-click="addComment(newcomment, check.checkResultIdentifier)">
+            <span class="glyphicon glyphicon-plus"></span>
+        </button>
+    </div>
 </div>
