--- a/dash-core/src/main/resources/static/app/dash/group/check/check.html
+++ b/dash-core/src/main/resources/static/app/dash/group/check/check.html
@@ -11,8 +11,17 @@
     </div>
 </div>
 
-<div class="panel-content-right" ng-if="check.iconSrc">
-    <img src="{{check.iconSrc}}" width="30" height="30"/>
+<div class="panel-content-right">
+    <img ng-if="check.iconSrc"
+         src="{{check.iconSrc}}"
+         width="20"
+         height="20"/>
+    <img ng-show="check.description"
+         width="20"
+         height="20"
+         src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/3d-transparent-glass-icons-alphanumeric/068122-3d-transparent-glass-icon-alphanumeric-question-mark1-ps.png"
+         title="{{check.description}}"
+    >
 </div>
 
 <div ng-show="check.checkResultIdentifier" class="comments">
