--- a/dash-core/src/main/resources/static/app/dash/group/check/check.html
+++ b/dash-core/src/main/resources/static/app/dash/group/check/check.html
@@ -18,17 +18,18 @@
          height="20"/>
 </div>
 
-<div ng-show="check.checkResultIdentifier" class="check-metainfo">
+<div class="check-metainfo">
 
     <div ng-show="check.description" class="description">
         <i>{{check.description}}</i>
     </div>
 
-    <blockquote class="comment" ng-repeat="comment in comments | byCheckResultIdentifier:check.checkResultIdentifier">
+    <blockquote ng-show="check.checkResultIdentifier" class="comment"
+                ng-repeat="comment in comments | byCheckResultIdentifier:check.checkResultIdentifier">
         {{ comment.comment }}
     </blockquote>
 
-    <div class="comments-form form-inline">
+    <div ng-show="check.checkResultIdentifier" class="comments-form form-inline">
         <input type="text" ng-model="newcomment" placeholder="new comment" class="form-control">
         <button class="btn btn-default"
                 ng-click="addComment(newcomment, check.checkResultIdentifier)">
